[package]
name = "lightyear_experiment_main"
version = "0.1.0"
edition = "2021"

[features]
default = ["websocket", "client", "server", "gui"]
steam = ["lightyear/steam"]
websocket = ["lightyear/websocket"]
server = []
client = ["gui"]
visualizer = ["gui", "lightyear/visualizer"]


gui = [
  "dep:bevy-inspector-egui",
  "bevy/bevy_asset",
  "bevy/bevy_render",
  "bevy/bevy_pbr",
  "bevy/bevy_scene",
  "bevy/bevy_core_pipeline",
  "bevy/bevy_gizmos",
  "bevy/tonemapping_luts",
  "bevy/smaa_luts",
  "bevy/default_font",
  "bevy/png",
  "bevy/hdr",
  "bevy/x11",
  "bevy/webgl2",
  "bevy/bevy_winit",
  "bevy/bevy_picking",
  "bevy/bevy_sprite",
  "bevy/bevy_text",
  "bevy/bevy_ui",
  "bevy/bevy_window",
]


[dependencies]
bevy = {version = "0.15"}
lightyear = { path = "../../bevy_testing_ground/lightyear/lightyear", features = [
  "leafwing",
  "avian3d",
  "websocket",
  "webtransport"
] }

leafwing-input-manager = { version="0.16.0", default-features = false, features = [
  "keyboard",
  "gamepad",
  "mouse"
] }

avian3d = { version="*", features = [
  "3d",
  "f32",
  "parry-f32",
#  "parallel",
  "serialize",
  "enhanced-determinism"
] }

bevy_third_person_camera = "0.2.0"

anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = "1.0.217"
rand = "0.9.0"
clap = { version = "4.5.29", features = ["derive"] }
cfg-if = "1.0.0"
async-compat = "0.2.3"
web-sys = "0.3.77"
crossbeam-channel = "0.5.14"
bevy_metrics_dashboard = { version = "0.4.0", optional = true }
bevy-inspector-egui =  { version ="0.29.1",  optional = true}


[target."cfg(target_family = \"wasm\")".dependencies]
web-sys = { version="0.3.77", features = ["Window", "Location"] }

# bevy-inspector-egui =  { version ="0.29.1"}
